[tool.poetry]
name = "b64-regex"
version = "0.1.0"
description = ""
authors = ["Mythic <mythicmaniac@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "b64_regex"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
